--- a/condiciones.html
+++ b/condiciones.html
@@ -40,6 +40,10 @@
     background-repeat: no-repeat;
     background-size: 100%;
 }
+.xlogo{
+    width: 40px;
+    height: 40px;
+}
    </style>
    
 </head>
@@ -64,48 +68,52 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="sucursales.html" >Sucursales</a>
+        <a href="sucursales.html">Nuestros refugios</a>
         <a href="condiciones.html">Condiciones</a>
-        <a href="registro.html" >Registro</a>
-        <a href="carrito.html">Comprar</a>
+        <a href="registro.html">Forma parte</a>
+        <a href="carrito.html">Adoptar</a>
     </div>
 
     <!-- The flexible grid (content) -->
     <div class="row">
         <div class="side">
-            <h2>Contáctenos...</h2>
+            <h3>CONTÁCTO</h3>
 
             <p>
-                Puede canalizar todas sus dudas escribiéndonos a: <br>
+                Si querés conocer más sobre nuestro proyecto, escribinos a: 
+                <br>
+                <br>
                 <a href="mailto:mis.mascotas@gmail.com">mis.mascotas@gmail.com</a>
             </p>
-            <h5>O seguinos a través de nuestras redes sociales</h5>
+                Seguinos a través de nuestras redes sociales
+                <br>
+                <br>
             <div style="padding-left: 16px;">
-                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"> Twitter</i> </a><br>
-                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"> Facebook</i> </a><br>
-                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"> Instagram</i> </a><br>                        
+                <a href="https://www.twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>                        
             </div>
 
         </div>
         <div class="main">
-            <h2>FORMA DE TRABAJO</h2>
-            <p>Para llevar a cabo esta tarea, hay una serie de pasos que seguir:</p>
+            <h2>CÓMO TRABAJAMOS...</h2>
+            <p>Para adoptar una mascota hay una serie de pasos a seguir:</p>
             <br>
             
-            <h3>PASO 1 – Rescate y recuperación</h3>
+            <h3>PASO 1: Rescate y recuperación</h3>
             <p>Se trata de hacer todo lo posible para dar asilo a la mayor cantidad de animales posible, por un tema de espacio y de presupuesto, no siempre es factible.
                 Una vez que el animal es rescatado, se le realiza un control veterinario para conocer en qué estado se encuentra, se vacuna y desparasita. Paso seguido, se fija fecha para su castración.</p>
             
-            <h3>PASO 2 – Difusión</h3>
+            <h3>PASO 2: Difusión</h3>
             <p>Una vez efectuada la castración, se observa su temperamento, comportamiento e interacción con otros animales y humanos. Luego de un minucioso diagnóstico se determina cuál sería su función en un hogar adoptivo: la de animal de compañía, guardia o alerta y qué tipo de ambiente sería ideal para el mismo: una casa, departamento, o un campo. Asimismo, se evalúa cual sería su adoptante correcto: una familia con niños o solo de adultos.</p>
 
-            <h3>PASO 3 – Puesta en adopción</h3>
+            <h3>PASO 3: Puesta en adopción</h3>
             <p>Luego de haber sido evaluado su temperamento, se publican fotos en diferentes medios de comunicación; como internet en redes sociales, sitios dedicados al ofrecimiento de mascotas para adopción y anuncios en los diarios.</p>
 
-            <h3>PASO 4 – Entrevistas</h3>
+            <h3>PASO 4: Entrevistas</h3>
             <p>Se entrevista a los posibles candidatos para cada adopción. Para poder adoptar es necesario ser mayor de edad, tener el consentimiento de todos los integrantes de la familia y acreditar su identidad mediante la presentación del documento de identidad. También se exige la copia de cualquier servicio a nombre del adoptante para poder cotejar la veracidad del domicilio.</p>
 
-            <h3>PASO 5 – Seguimientos</h3>
+            <h3>PASO 5: Seguimientos</h3>
             <p>Cada animal se entrega en adopción con una chapa identificadora que tiene números de contacto del grupo y un número que corresponde al animal adoptado. Una vez que se efectuó la adopción, se vuelca esa información a una base de datos, que permite tener acceso a la información para llevar a cabo los seguimientos.
                 Se realizan varios llamados a lo largo del tiempo para ver cómo se adaptó a su nuevo hogar.
                 Muchos adoptantes generan un vínculo con Mascotas en adopción a traves de los años.</p>
