--- a/carrito.html
+++ b/carrito.html
@@ -50,9 +50,9 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="Refugios.html" >Refugios</a>
+        <a href="refugios.html" >Refugios</a>
         <a href="condiciones.html">Condiciones</a>
-        <a href="registro.html" >Registro</a>
+        <a href="registro.html" >Forma parte</a>
         <a href="carrito.html">Adoptar</a>
     </div>
 
