--- a/refugios.html
+++ b/refugios.html
@@ -49,9 +49,9 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="Refugios.html" >Refugios</a>
+        <a href="refugios.html" >Refugios</a>
         <a href="condiciones.html">Condiciones</a>
-        <a href="registro.html" >Registro</a>
+        <a href="registro.html" >Forma parte</a>
         <a href="carrito.html">Adoptar</a>
     </div>
 
@@ -66,9 +66,9 @@
             </p>
             <h5>O seguinos a través de nuestras redes sociales</h5>
             <div style="padding-left: 16px;">
-                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"> Twitter</i> </a><br>
-                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"> Facebook</i> </a><br>
-                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"> Instagram</i> </a><br>                        
+                <a href="https://www.twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>                        
             </div>
             <div>
                 <br>
