--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Header -->
     <div class="header" >
-        <img src="./img/pets_col.png" alt="logo" width="100px">
+        <img src="./img/pets_col.png" alt="logo" width="100">
         <h1><span class="titulo">MisMascotas</span></h1>
     </div>
 
