--- a/registro.html
+++ b/registro.html
@@ -97,7 +97,7 @@
                 <label for="txtTelefono"><b>Teléfono</b></label>
                 <input type="text" placeholder="Ingrese Telefono" name="txtTelefono" id="txtTelefono" required>
             
-                <label for="contacto"><b>Area de contacto</b></label>
+                <label for="txtContacto"><b>Area de contacto</b></label>
                 <select>
                     <option value="participar">Como quiere participar</option>
                     <option value="adopciones">ADOPCIONES</option>
