--- a/show_data.html
+++ b/show_data.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MisMascotas</title>
   <script src="https://kit.fontawesome.com/e15e8c34af.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="">
-  <link rel="stylesheet" href="css/estilo.css">
+
   <link rel="shortcut icon" href="./img/pets_col.png" type="image/x-icon">
 </head>
 
@@ -30,7 +29,7 @@
             </tr>
 
 
-            <script language="javascript">
+            <script>
               var args = location.search.substr(1).split('&');
               for (var i = 0; i < args.length; ++i) {
                 var parts = args[i].split('=');
@@ -50,7 +49,7 @@
               }
             </script>
 
-            <noscript>
+            
               <tr>
                 <td>
                   <p>You need to turn on Javascript in your browser.</p>
@@ -73,7 +72,7 @@
                   </ul>
                 </td>
               </tr>
-            </noscript>
+            
           </table>
         </div>
       </div>
