--- a/show_data.html
+++ b/show_data.html
@@ -49,7 +49,7 @@
               }
             </script>
 
-            
+            <noscript>
               <tr>
                 <td>
                   <p>You need to turn on Javascript in your browser.</p>
@@ -72,7 +72,7 @@
                   </ul>
                 </td>
               </tr>
-            
+          </noscript>
           </table>
         </div>
       </div>
