--- a/registro.html
+++ b/registro.html
@@ -98,7 +98,7 @@
                 <input type="text" placeholder="Ingrese Telefono" name="txtTelefono" id="txtTelefono" required>
             
                 <label><b>Area de contacto</b></label>
-                <select>
+                <select name="opt_id" required>
                     <option value="participar">Como quiere participar</option>
                     <option value="adopciones">ADOPCIONES</option>
                     <option value="donaciones">DONACIONES</option>
